fix TU integration